# mepack

./: .editorconfig  .gitignore  .gitlab-ci.yml  .setup_compile_commands.sh  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE  LICENSE  README.md  mepack.pc.in
doc/: naming.md  (+5 more)
examples/: CMakeLists.txt  README.md  mepack_lua_config.lua
examples/benchmark/: CMakeLists.txt  README.md  benchmark_all_tgcsylv.c  benchmark_all_tglyap.c  benchmark_all_tgstein.c  benchmark_all_tgsylv.c  benchmark_all_trlyap.c  benchmark_all_trstein.c  benchmark_all_trsylv.c  benchmark_all_trsylv2.c
examples/benchmark_lib/: CMakeLists.txt  README.md  benchmark.h  context.c  hess.c  init.c  problems.c  recsy_helper.c  rhs.c
examples/data/: README.md  glyap-40x40-demo.h5
examples/frontend/: CMakeLists.txt  README.md  frontend_gelyap.c  frontend_gelyap_single.c  frontend_gestein.c  frontend_gestein_single.c  frontend_gesylv.c  frontend_gesylv2.c  frontend_gesylv2_single.c  frontend_gesylv_single.c  frontend_ggcsylv.c  frontend_ggcsylv_dual.c  frontend_ggcsylv_dual_single.c  frontend_ggcsylv_single.c  frontend_gglyap.c  frontend_gglyap_single.c  frontend_ggstein.c  frontend_ggstein_single.c  frontend_ggsylv.c  frontend_ggsylv_single.c
examples/misc/: CMakeLists.txt  README.md  benchmark_dag.f90  benchmark_eigenvalue_reorder.f90  benchmark_recsy.f90  benchmark_row_columnwise.f90  glyap_test_data.mat  solve_mepack_glyap.f90  solve_refine_glyap.f90  solve_slicot_glyap.f90
examples/refine/: CMakeLists.txt  README.md  refine_gelyap.c  refine_gelyap_single.c  refine_gestein.c  refine_gestein_single.c  refine_gesylv.c  refine_gesylv2.c  refine_gesylv2_single.c  refine_gesylv_single.c  refine_ggcsylv.c  refine_ggcsylv_dual.c  refine_ggcsylv_dual_single.c  refine_ggcsylv_single.c  refine_gglyap.c  refine_gglyap_single.c  refine_ggstein.c  refine_ggstein_single.c  refine_ggsylv.c  refine_ggsylv_single.c
examples/tools/: CMakeLists.txt  README.md  generate_evp.c  generate_gevp.c
examples/triangular/: CMakeLists.txt  README.md  benchmark_tgcsylv.c  benchmark_tgcsylv_dual.c  benchmark_tgcsylv_dual_single.c  benchmark_tgcsylv_single.c  benchmark_tglyap.c  benchmark_tglyap_single.c  benchmark_tgstein.c  benchmark_tgstein_single.c  benchmark_tgsylv.c  benchmark_tgsylv_single.c  benchmark_trlyap.c  benchmark_trlyap_single.c  benchmark_trstein.c  benchmark_trstein_single.c  benchmark_trsylv.c  benchmark_trsylv2.c  benchmark_trsylv2_single.c  benchmark_trsylv_single.c  main.c
matlab/: CMakeLists.txt  README.md  ci.yaml  csylv.cpp  csylv_dual.cpp  csylv_dual_refine.cpp  csylv_refine.cpp  glyap.cpp  glyap_refine.cpp  gstein.cpp  gstein_refine.cpp  gsylv.cpp  gsylv_refine.cpp  hess_test.hpp  hess_triangular_test.hpp  lyap.cpp  lyap_refine.cpp  mepackoptions.hpp  qtriangular_test.hpp  run_tests_matlab.m.in  run_tests_octave.m.in  startup.m.in  stein.cpp  stein_refine.cpp  sylv.cpp  sylv2.cpp  sylv2_refine.cpp  sylv_refine.cpp  tgcsylv.cpp  tgcsylv_dual.cpp  tglyap.cpp  tgstein.cpp  tgsylv.cpp  triangular_test.hpp  trlyap.cpp  trstein.cpp  trsylv.cpp  trsylv2.cpp
matlab/help/: mepack_csylv.m  mepack_csylv_dual.m  mepack_csylv_dual_refine.m  mepack_csylv_refine.m  mepack_glyap.m  mepack_glyap_refine.m  mepack_gstein.m  mepack_gstein_refine.m  mepack_gsylv.m  mepack_gsylv_refine.m  mepack_lyap.m  mepack_lyap_refine.m  mepack_stein.m  mepack_stein_refine.m  mepack_sylv.m  mepack_sylv2.m  mepack_sylv2_refine.m  mepack_sylv_refine.m  mepack_tgcsylv.m  mepack_tgcsylv_dual.m  mepack_tglyap.m  mepack_tgstein.m  mepack_tgsylv.m  mepack_trlyap.m  mepack_trstein.m  mepack_trsylv.m  mepack_trsylv2.m
matlab/tests/: mepack_test_init_random.m  test_cgsylv.m  test_cgsylv_dual.m  test_cgsylv_dual_refine.m  test_cgsylv_dual_refine_single.m  test_cgsylv_dual_single.m  test_cgsylv_refine.m  test_cgsylv_refine_single.m  test_cgsylv_single.m  test_glyap.m  test_glyap_refine.m  test_glyap_refine_single.m  test_glyap_single.m  test_gstein.m  test_gstein_refine.m  test_gstein_refine_single.m  test_gstein_single.m  test_gsylv.m  test_gsylv_refine.m  test_gsylv_refine_single.m  test_gsylv_single.m  test_lyap.m  test_lyap_refine.m  test_lyap_refine_single.m  test_lyap_single.m  test_stein.m  test_stein_refine.m  test_stein_refine_single.m  test_stein_single.m  test_sylv.m  test_sylv2.m  test_sylv2_refine.m  test_sylv2_refine_single.m  test_sylv2_single.m  test_sylv_refine.m  test_sylv_refine_single.m  test_sylv_single.m  test_tgcsylv.m  test_tgcsylv_dual.m  test_tglyap.m  (+6 more)
mexoct/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  MexOct.cmake
mexoct/cmake/: FindMexOctMatlab.cmake  FindMexOctOctave.cmake
mexoct/example/: CMakeLists.txt  allocate_memory.cpp  example_care.cpp  example_function_variants.cpp  example_info.cpp  geqrf.cpp  no_argument.cpp  paramtypes_care.hpp  test_care.m
mexoct/mexoct/: argparser.hpp  array_type.hpp  errors.hpp  function_signature.hpp  interface.hpp  memory.hpp  mexallocator.hpp  parameter.hpp  paramtypes.hpp  print.hpp  scalar_type.hpp  string.hpp  traits.hpp  utils.hpp
mexoct/project_demo/: CMakeLists.txt  lu.cpp
mexoct/tests/: CMakeLists.txt  install_pre_2016b.sh  install_pre_2018a.sh  run_tests_matlab.m.in  run_tests_octave.m.in
mexoct/tools/: extract_helptext.c  extract_helptext_octave.c
src/: CMakeLists.txt  default_config.lua  mepack.def  mepack.h  mepack.intel.map  mepack.map  mepack_internal.h
src/common/: init.c  init.f90  init_lua.c  version.F90  version.c
src/config/: ibm-power8-xlf-essl.lua  intel-xeon-e5-2640v3-parallel-studio-2018.lua  intel-xeon-silver-4110-parallel-studio-2018.lua
src/misc/: dla_dtrmm_fix.f90  dla_geaxb.f90  dla_itranspose.f90  dla_qtrmm2.f90  dla_small_solve4.f90  dla_small_solve8.f90  dla_sort_ev.f90  dla_sort_gev.f90  dla_transform_general.f90  dla_transform_standard.f90  sla_geaxb.f90  sla_itranspose.f90  sla_qtrmm2.f90  sla_small_solve4.f90  sla_small_solve8.f90  sla_sort_ev.f90  sla_sort_gev.f90  sla_strmm_fix.f90  sla_transform_general.f90  sla_transform_standard.f90  xerror_handler.c  xerror_handler_doc.f90
test/arguments/: CMakeLists.txt  proto.h
(+510 files in other folders)
