
ADD_SUBDIRECTORY(benchmark_lib)
SET(ADDITIONAL_LIBRARIES "")
IF( RECSY )
    MESSAGE(STATUS "Using ${RECSY} as RECSY library")
    SET (ADDITIONAL_LIBRARIES ${RECSY})
    ADD_DEFINITIONS(-DRECSY)
ENDIF()
IF ( GL705 )
    MESSAGE(STATUS "Using ${GL705} as Algorithm 705 code.")
    SET (ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} ${GL705})
    ADD_DEFINITIONS(-DGL705)
ENDIF()


ADD_SUBDIRECTORY(triangular)
ADD_SUBDIRECTORY(frontend)
ADD_SUBDIRECTORY(refine)
ADD_SUBDIRECTORY(benchmark)
ADD_SUBDIRECTORY(misc)
ADD_SUBDIRECTORY(tools)


